# Cryptgram

./: Crib.hs  Cryptogram.cabal  Dict.hs  FBackTrack.hs  Gutenberg2006.txt  Label.hs  README.md  Shape.hs  TestWords.hs  Words.hs  stack.yaml
app/: Main.hs
data/: Gutenberg2006.txt  SmallDict.txt  cryptogram.txt  cryptogram1.txt  cryptogram2.txt
src/: Crib.hs  Dict.hs  FBackTrack.hs  Label.hs  Shape.hs  TestWords.hs  Words.hs
