Name:             Cryptogram
Version:          0.1
Description:      Solves cryptograms
Synopsis:	        This code solves simple substitution cryptograms
License:          MIT
License-file:     LICENSE
Author:           Nick Straw
Homepage:	        http://www.broxholme.com/
Maintainer:       nick@broxholme.com
Build-Type:       Simple
cabal-Version:    >=1.10

Category:	Testing
library
  hs-source-dirs:   src
  exposed-modules:   Words
                   , Shape
                   , Label
                   , Dict
                   , Crib
                   , TestWords
                   , FBackTrack
  default-language:  Haskell2010
  build-Depends:     base >= 4.7.0.1
                   , containers
                   , logict
  ghc-options:       -Wall


executable cryptogram-exe
  hs-source-dirs:      app
  main-is:             Main.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base
                     , Cryptogram
  default-language:    Haskell2010

test-suite cryptogram-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  build-depends:       base
                     , Cryptogram
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/b1g3ar5/Cryptogram
